[package]
name = "tileserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }
either = "1.13.0"
http-body-util = "0.1.2"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
itertools = "0.13.0"
jpeg-encoder = "0.6.0"
rusqlite = "0.32.1"
thiserror = "2.0.9"
tokio = { version = "1.40", features = ["full"] }
url = "2.5.4"
zstd = "0.13.2"
