[package]
name = "freemap-tileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.28", features = ["derive"] }
http-body-util = "0.1.2"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
itertools = "0.14.0"
jpeg-encoder = "0.6.0"
rusqlite = "0.33.0"
serde_json = "1.0.138"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.40", features = ["full"] }
url = "2.5.4"
zstd = "0.13.2"

[[bin]]
name = "freemap-tileserver"
