[package]
name = "freemap-tileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
itertools = "0.14.0"
jpeg-encoder = "0.6.1"
rusqlite = "0.38.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
zstd = "0.13.3"

[[bin]]
name = "freemap-tileserver"
